[tool.poetry]
name = "oh-my-pika"
version = "0.1.0"
description = ""
authors = ["so1n <qaz6803609@163.com>"]
license = "Apache Software License"
readme = "./README.md"
repository = "https://github.com/so1n/oh-my-pika"
homepage = "https://github.com/so1n/oh-my-pika"

[tool.poetry.dependencies]
python = "^3.7"
PyPika = "^0.48.9"
omymodels = "^0.11.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest]
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["oh-my-pika"]
omit = [
    ".venv",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "continue",

    # type hints
    "if TYPE_CHECKING:",
    "pass",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
